--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,10 +24,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  _jobWorkflow:
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./ui
+
   # Build job
   build:
     runs-on: ubuntu-latest
-    
+
+  
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,12 +42,12 @@ jobs:
         id: detect-package-manager
         working-directory: ui/
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+          if [ -f "${{ env.working-directory }}/yarn.lock" ]; then
             echo "::set-output name=manager::yarn"
             echo "::set-output name=command::install"
             echo "::set-output name=runner::yarn"
             exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
+          elif [ -f "${{ env.working-directory }}/ui/package.json" ]; then
             echo "::set-output name=manager::npm"
             echo "::set-output name=command::ci"
             echo "::set-output name=runner::npx --no-install"
