--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,40 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# backend gitignore
+# compiled output
+backend/dist
+backend/node_modules
+
+# Logs
+backend/logs
+backend/*.log
+backend/npm-debug.log*
+backend/pnpm-debug.log*
+backend/yarn-debug.log*
+backend/yarn-error.log*
+backend/lerna-debug.log*
+
+# OS
+backend/.DS_Store
+
+# Tests
+backend/coverage
+backend/.nyc_output
+
+# IDEs and editors
+backend/.idea
+backend/.project
+backend/.classpath
+backend/.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+backend/.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
