--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "ssv-keys": "https://github.com/bloxapp/ssv-keys.git"
+    "ssv-keys": "https://github.com/bloxapp/ssv-keys.git",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
