--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
+    "@nestjs/typeorm": "^9.0.1",
     "ethers": "^5.7.2",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "ssv-keys": "https://github.com/bloxapp/ssv-keys.git",
+    "typeorm": "^0.3.11",
     "web3": "^1.8.1"
   },
   "devDependencies": {
