--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,6 +2,9 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+solc-version = "0.8.17"
+optimizer = true
+optimizer-runs = 10_000_000
 
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
