--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "theme-change": "^2.2.0",
-    "wagmi": "^0.8.5"
+    "wagmi": "^0.8.5",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
@@ -41,11 +42,13 @@
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.0.3",
     "firebase": "^9.9.3",
+    "fs": "^0.0.1-security",
     "ipfs-http-client": "^57.0.3",
     "nprogress": "^0.2.0",
     "pg": "^8.8.0",
     "postcss": "^8.4.16",
     "sequelize-cockroachdb": "^6.0.5",
+    "ssv-keys": "github:bloxapp/ssv-keys",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2",
