--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,9 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "fs": "^0.0.1-security",
     "jest": "28.1.3",
+    "path": "^0.12.7",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
