updated gh workflow

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -13,16 +13,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
+          working-directory: ./ui
           node-version: 'lts/*'
           cache: 'npm'
 
       - name: Build
+        working-directory: ./ui
         run: |
-          cd ./ui
           npm i
           npm run build
           npm run export
