--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   deployment:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./ui
 
     steps:
       - uses: actions/checkout@v3
