--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -22,6 +22,7 @@ jobs:
           working-directory: ./ui
           node-version: 'lts/*'
           cache: 'npm'
+          cache-dependency-path: ./ui/package-lock.json
 
       - name: Build
         working-directory: ./ui
