--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./out
+          path: ./ui/out
 
   # Deployment job
   deploy:
